# hand_eye_calibration

./: .gitignore  README.md  calibrate_base_tt.py  calibrate_hand_eye.py  calibrate_intrinsic.py  dhe_factor_graph.py  generate_hand_eye.py  poses.yaml  randomised_traj_gen.py  read_rosbag.py  reproj_sim.py  rm_factor_graph.py  robot_pose_validator.py  robot_pose_validitor.py  sim.py  simulation.py  target.py  transform_util.py
kinetic_backend/: CMakeLists.txt
kinetic_backend/include/: cam2tt_projection_factor.h  dhe_factor_graph.h  general_projection_factor.h  he_pose_constraint_factor.h  lidar2tt_point2plane_factor.h  rm_factor.h
kinetic_backend/include/base_tt_factors/: base_tt_projection_factor.h  hand_pose_factor.h  track_pose_factor.h  tt_pose_factor.h
kinetic_backend/include/geometry/: Cal3Rational.h  Cal3Rational_Base.h  surfel3.h
kinetic_backend/include/hand_eye_factors/: dhe_factor.h
kinetic_backend/src/: dhe_factor_graph.cpp  main.cpp  pybind.cpp
kinetic_backend/src/geometry/: Cal3Rational.cpp  Cal3Rational_Base.cpp  surfel3.cpp
scripts/: install.sh
system_calibration/: setup.py
system_calibration/apps/: build_sim_sys.py  cal3rational_test.py  calibrate_base_tt.py  calibrate_hand_eye.py  calibrate_intrinsic.py  calibrate_joint_calib.py  dual_trajs_sim.py  generate_hand_eye.py  random_traj_gen.py  randomised_traj_gen.py  rational_model_derivative.py  read_bags.py  reproj_sim.py  static_transforms.yaml  static_transforms_gt.yaml  stereo_left.json  test_static_transform.py
system_calibration/apps/data/: calibration.yaml  cam2ee.yaml  left_primary.yaml  right_primary.yaml  stereo_right.json
system_calibration/apps/data/flatter_bag/: cam2ee.yaml
system_calibration/system_calibration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
system_calibration/system_calibration/IO/: __init__.py  bag_reader.py  read_rosbag.py  topic_trigger_bag_reader.py
system_calibration/system_calibration/backend/: __init__.py  base_tt_factor_graph.py  dhe_factor_graph.py  intrinsic_calibrator.py  intrinsic_factor_graph.py  joint_calib_graph.py  rm_factor_graph.py
system_calibration/system_calibration/frontend/: __init__.py  aruco_detector.py
system_calibration/system_calibration/simulation/: __init__.py  robot_pose_validator.py  sim.py  system_simulator.py  target.py
system_calibration/system_calibration/simulation/components/: __init__.py  component.py
system_calibration/system_calibration/simulation/components/movable_components/: __init__.py  movable_component.py  robot.py  track.py  turntable.py
system_calibration/system_calibration/simulation/components/perception_components/: __init__.py  camera.py  lidar.py  perception_component.py  utils.py
system_calibration/system_calibration/simulation/components/target_components/: __init__.py  aruco_board_target.py  aruco_cube_target.py  aruco_cube_target_v2.py  checkerboard_target.py  target.py
system_calibration/system_calibration/utils/: __init__.py  math_util.py  point_cloud_utils.py  projection_util.py  ros_utils.py  transform_util.py  video_recorder.py
